# TableBuilderReader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: table_builder_reader.py
src/abs_methods/: table_builder_reader.py
src/table_builder_reader/: table_builder_reader.py
