[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "table_builder_reader"
version = "0.2.0"
description = "A flexible and robust interface for reading, cleaning, and processing ABS TableBuilder CSV outputs, with optional geospatial support."
authors = [
    { name="Jack Moon", email="jack.moon@tenantsunion.org.au" }
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "geopandas>=0.10"
]

[project.urls]
Homepage = "https://github.com/data-TUNSW/TableBuilderReader"